--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,16 +7,16 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=3.0.0 <3.16.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
 
-  cupertino_icons: ^1.0.2
-  share_plus: ^4.0.10+1
-  permission_handler: ^10.0.0
+  cupertino_icons: any
+  share_plus: any
+  permission_handler: any
 
   stories_editor:
     path: ../
@@ -25,7 +25,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^4.0.0
 
 
 flutter:
