--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_text_kit: ^4.2.2
 
   flutter_screenutil: ^5.6.0
+  video_player: ^2.8.6
 
 dev_dependencies:
   flutter_test:
