--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ flutter:
     - packages/stories_editor/assets/icons/photo_filter.png
     - packages/stories_editor/assets/icons/video_trim.png
     - packages/stories_editor/assets/images/instagram_logo.png
+    - packages/stories_editor/assets/icons/back_arrow.png
+    - packages/stories_editor/assets/icons/music.png
+    - packages/stories_editor/assets/icons/effect.png
 
   fonts:
 
